--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: url('https://i.imgur.com/Q6hTzFu.gif') no-repeat center center/cover;
+        background: url('bg.png') no-repeat center center/cover;
         opacity: 0.1;
         z-index: -1;
         animation: bgMove 30s linear infinite;
