--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="ThornEmpire - A legjobb magyar Minecraft közösség. Survival, Skyblock, Economy és sok más játékmód!">
+        content="ThornEmpire - AHHHH DADDY XDDDDDDD">
     <title>ThornEmpire - Premium Minecraft Szerver</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
