--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             max-width: 100vw;
         }
 
-        /* Particle background */
         #particles-js {
             position: fixed;
             width: 100%;
@@ -58,7 +57,6 @@
             background: var(--dark);
         }
 
-        /* Minecraft block pattern overlay */
         body::before {
             content: "";
             position: fixed;
@@ -73,7 +71,6 @@
             pointer-events: none;
         }
 
-        /* Scrollbar */
         ::-webkit-scrollbar {
             width: 10px;
         }
@@ -91,7 +88,6 @@
             background: var(--primary-dark);
         }
 
-        /* Header */
         header {
             background: rgba(18, 18, 18, 0.98);
             padding: 15px 5%;
@@ -193,7 +189,6 @@
             flex-shrink: 0;
         }
 
-        /* Hero section */
         .hero {
             min-height: 100vh;
             display: flex;
@@ -374,7 +369,6 @@
             color: var(--primary);
         }
 
-        /* Main sections */
         section {
             padding: clamp(60px, 10vw, 100px) 5%;
             position: relative;
@@ -427,21 +421,17 @@
             border-bottom: 1px solid rgba(46, 204, 113, 0.1);
         }
 
-        /* Join section */
 
         .steps-container {
             margin-top: 20px;
             background: #111;
-            /* háttér szín a fekete témához */
             padding: 20px;
             border-radius: 10px;
             color: #fff;
-            /* zöldes fény */
         }
 
         .steps-container h3 {
             color: #00ff88;
-            /* zöld kiemelés */
             margin-bottom: 10px;
         }
 
@@ -599,7 +589,6 @@
             margin-left: 8px;
         }
 
-        /* Team section */
         .team-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(min(250px, 100%), 1fr));
@@ -699,7 +688,6 @@
             transform: translateY(-3px);
         }
 
-        /* Features section */
         .features-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(min(280px, 100%), 1fr));
@@ -778,7 +766,6 @@
             gap: 10px;
         }
 
-        /* News section */
         .news-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
@@ -864,7 +851,6 @@
             gap: 10px;
         }
 
-        /* FAQ section */
         .faq-container {
             max-width: min(800px, 95vw);
             margin: 50px auto 0;
@@ -953,7 +939,6 @@
             overflow-wrap: break-word;
         }
 
-        /* Rules section */
         .rules-container {
             max-width: min(800px, 95vw);
             margin: 50px auto 0;
@@ -1000,7 +985,6 @@
             color: var(--danger);
         }
 
-        /* Footer */
         footer {
             background: linear-gradient(135deg, rgba(10, 10, 10, 0.98) 0%, rgba(18, 18, 18, 0.98) 100%);
             padding: clamp(40px, 8vw, 60px) 5% clamp(20px, 4vw, 30px);
@@ -1114,7 +1098,6 @@
             word-break: break-all;
         }
 
-        /* Animations */
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -1192,7 +1175,6 @@
             }
         }
 
-        /* Enhanced Responsive styles */
         @media (max-width: 1200px) {
             header {
                 padding: 12px 4%;
@@ -1579,7 +1561,6 @@
             }
         }
 
-        /* Print styles */
         @media print {
             * {
                 color: black !important;
@@ -1608,7 +1589,6 @@
             }
         }
 
-        /* High contrast mode */
         @media (prefers-contrast: high) {
             :root {
                 --primary: #00ff00;
@@ -1618,7 +1598,6 @@
             }
         }
 
-        /* Reduced motion */
         @media (prefers-reduced-motion: reduce) {
 
             *,
@@ -1635,7 +1614,6 @@
 
 <body>
 
-    <!-- Particles Background -->
     <div id="particles-js"></div>
 
     <header>
@@ -1713,7 +1691,6 @@
                 </button>
             </div>
 
-            <!-- Útmutató rész -->
             <div class="steps-container">
                 <h3>Hogyan csatlakozz?</h3>
                 <ol>
@@ -1835,9 +1812,7 @@
             <div class="faq-item">
                 <div class="faq-question">Milyen verzióval működik a szerver?</div>
                 <div class="faq-answer">
-                    <p>A szerverünk jelenleg a Minecraft 1.20 verzióját támogatja, de kompatibilis az 1.20-nál újabb
-                        verziókkal is. Javasoljuk, hogy mindig a legfrissebb verziót használd a legjobb élmény
-                        érdekében.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor laborum ullam commodi dignissimos minima adipisci, eaque illo non esse neque atque veniam assumenda eligendi? Cum quasi doloribus molestiae possimus modi.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -1851,19 +1826,13 @@
             <div class="faq-item">
                 <div class="faq-question">Hogyan lehet Moderátor vagy Admin?</div>
                 <div class="faq-answer">
-                    <p>A staff csapatunkba jelenleg csak meghívásos alapon lehet csatlakozni. Olyan játékosokat
-                        keresünk, akik hosszú ideje játszanak a szerveren, ismerik a szabályokat, segítőkészek és
-                        felelősségteljesek. Ha érdekel a pozíció, vedd fel a kapcsolatot egy jelenlegi Adminnal a
-                        játékban vagy Discordon.</p>
+                    <p>te? sehogy xd</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">Mi a teendő, ha valaki megszegi a szabályokat?</div>
                 <div class="faq-answer">
-                    <p>Ha olyan játékost látsz, aki megszegi a szabályokat (pl. csal, trollkodik, sért másokat), kérjük,
-                        hogy azonnal jelezd egy online Moderátornak vagy Adminnak a játékban (/msg parancs), vagy a
-                        Discord szerverünkön a #report csatornában. Kérjük, hogy minél több bizonyítékot szolgáltass
-                        (képernyőfotó, videó).</p>
+                    <p>asd.</p>
                 </div>
             </div>
         </div>
@@ -1948,7 +1917,6 @@
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
-        // Mobile menu toggle
         const mobileMenuBtn = document.getElementById('mobileMenuBtn');
         const mainNav = document.getElementById('mainNav');
 
@@ -1959,7 +1927,6 @@
                 : '<i class="fas fa-bars"></i>';
         });
 
-        // Close mobile menu when clicking a link
         document.querySelectorAll('nav a').forEach(link => {
             link.addEventListener('click', () => {
                 if (mainNav.classList.contains('active')) {
@@ -1969,7 +1936,6 @@
             });
         });
 
-        // Header scroll effect
         const header = document.querySelector('header');
         window.addEventListener('scroll', () => {
             if (window.scrollY > 50) {
@@ -1979,13 +1945,11 @@
             }
         });
 
-        // FAQ accordion
         document.querySelectorAll('.faq-question').forEach(question => {
             question.addEventListener('click', () => {
                 const item = question.parentElement;
                 item.classList.toggle('active');
 
-                // Close other open items
                 document.querySelectorAll('.faq-item').forEach(otherItem => {
                     if (otherItem !== item && otherItem.classList.contains('active')) {
                         otherItem.classList.remove('active');
@@ -1994,7 +1958,6 @@
             });
         });
 
-        // Copy IP button
         const copyBtn = document.getElementById('copyBtn');
         copyBtn.addEventListener('click', () => {
             navigator.clipboard.writeText('balkercraft.eu').then(() => {
@@ -2005,7 +1968,6 @@
             });
         });
 
-        // Scroll animation for sections
         const sections = document.querySelectorAll('section');
         window.addEventListener('scroll', () => {
             const triggerBottom = window.innerHeight * 0.8;
@@ -2019,7 +1981,6 @@
             });
         });
 
-        // Initialize particles.js
         particlesJS("particles-js", {
             "particles": {
                 "number": {
