--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ThornEmpire - AHHHH DADDY XDDDDDDD">
+    <meta name="description" content="ThornEmpire - Fullpvp Minecraft Szerver">
     <title>ThornEmpire - Fullpvp Minecraft Szerver</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
