--- a/index.html
+++ b/index.html
@@ -1619,7 +1619,7 @@
         <nav id="mainNav">
             <a href="#home"><i class="fas fa-home"></i> Kezdőlap</a>
             <a href="#csatlakozas"><i class="fas fa-plug"></i> Csatlakozás</a>
-            <a href="https://bolt.thornempire.hu"><i class="fas fa-shop"></i> Bolt</a>
+            <a href="https://bolt.thornempire.hu"><i class="fas fa-shop"></i> hBolt</a>
             <a href="#csapattagok"><i class="fas fa-users"></i> Csapattagok</a>
             <a href="#hirek"><i class="fas fa-newspaper"></i> Hírek</a>
             <a href="#faq"><i class="fas fa-question-circle"></i> FAQ</a>
