--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="ThornEmpire - Fullpvp Minecraft Szerver">
     <title>ThornEmpire - Fullpvp Minecraft Szerver</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="favicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Press+Start+2P&display=swap"
         rel="stylesheet">
