--- a/index.html
+++ b/index.html
@@ -414,9 +414,12 @@
         }
 
         .section-bg {
-            background: linear-gradient(135deg, rgba(18, 18, 18, 0.9) 0%, rgba(10, 10, 10, 0.95) 100%);
-            border-top: 1px solid rgba(52, 152, 219, 0.1);
-            border-bottom: 1px solid rgba(52, 152, 219, 0.1);
+            background: 
+                linear-gradient(135deg, rgba(18, 18, 18, 0.9) 0%, rgba(10, 10, 10, 0.95) 100%),
+                radial-gradient(circle at 50% 50%, rgba(52, 152, 219, 0.03) 0%, transparent 50%);
+            border-top: 1px solid rgba(52, 152, 219, 0.2);
+            border-bottom: 1px solid rgba(52, 152, 219, 0.2);
+            position: relative;
         }
 
         .steps-container {
@@ -771,19 +774,39 @@
         }
 
         .news-card {
-            background: rgba(18, 18, 18, 0.7);
-            border-radius: 15px;
+            background: linear-gradient(135deg, rgba(18, 18, 18, 0.8), rgba(15, 15, 15, 0.8));
+            border-radius: 20px;
             overflow: hidden;
-            transition: all 0.3s ease;
-            border: 1px solid rgba(52, 152, 219, 0.1);
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            border: 1px solid rgba(52, 152, 219, 0.2);
             width: 100%;
             max-width: 100%;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            position: relative;
+        }
+
+        .news-card::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, rgba(52, 152, 219, 0.05), transparent);
+            opacity: 0;
+            transition: all 0.4s ease;
+            z-index: 1;
+            border-radius: 20px;
         }
 
         .news-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 30px rgba(52, 152, 219, 0.1);
-            border-color: rgba(52, 152, 219, 0.3);
+            transform: translateY(-15px) scale(1.02);
+            box-shadow: 0 25px 50px rgba(52, 152, 219, 0.15);
+            border-color: rgba(52, 152, 219, 0.4);
+        }
+
+        .news-card:hover::before {
+            opacity: 1;
         }
 
         .news-image {
@@ -798,18 +821,23 @@
             position: absolute;
             top: 15px;
             right: 15px;
-            background: rgba(10, 10, 10, 0.8);
+            background: rgba(10, 10, 10, 0.9);
             color: var(--primary);
-            padding: 5px 15px;
-            border-radius: 50px;
+            padding: 8px 15px;
+            border-radius: 25px;
             font-size: clamp(0.7rem, 1.8vw, 0.8rem);
             font-weight: 600;
             white-space: nowrap;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(52, 152, 219, 0.3);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
 
         .news-content {
             padding: clamp(20px, 4vw, 25px);
             word-break: break-word;
+            position: relative;
+            z-index: 2;
         }
 
         .news-content h3 {
@@ -1469,13 +1497,13 @@
                 font-size: 2rem;
             }
 
-            .news-image {
+.news-image {
                 height: 140px;
             }
 
             .news-date {
                 font-size: 0.7rem;
-                padding: 4px 10px;
+                padding: 6px 12px;
             }
 
             .member-image {
@@ -1727,7 +1755,7 @@
         </div>
     </section>
 
-    <section id="hirek" class="section-bg">
+<section id="hirek" class="section-bg">
         <div class="section-title">
             <h2>Legfrissebb Hírek</h2>
             <p>Maradj naprakész a szerver legújabb fejlesztéseivel és eseményeivel kapcsolatban</p>
@@ -1735,14 +1763,20 @@
         <div class="news-container">
             <div class="news-card">
                 <div class="news-image" style="background-image: url('bg.png');">
+                    <div class="news-date"><i class="fas fa-calendar"></i> 2025.08.09 17:00</div>
                 </div>
                 <div class="news-content">
                     <h3>SOTW</h3>
-                    <p>SOTW 2025.08.09. 17:00-kor indul! Ne maradj le!</p>
+                    <p>SOTW 2025.08.09. 17:00-kor indul! Új kezdet vár mindannyiótokra. Ne maradj le a nagy indításról!</p>
+                </div>
+            </div>
+            <div class="news-card">
+                <div class="news-image" style="background-image: url('eotw.jpg');">
+                    <div class="news-date"><i class="fas fa-calendar"></i> 2025.08.08 17:00</div>
                 </div>
                 <div class="news-content">
                     <h3>EOTW</h3>
-                    <p>EOTW 2025.08.08. 17:00-kor indul! Ne maradj le!</p>
+                    <p>EOTW 2025.08.08. 17:00-kor indul! Az aktuális season végére készülünk. Ne maradj le!</p>
                 </div>
             </div>
         </div>
