eotw-playerlist.jpg

--- a/index.html
+++ b/index.html
@@ -1782,6 +1782,37 @@
         </div>
     </section>
 
+    <section id="eotw" class="section-bg">
+    <div class="section-title">
+        <h2>EOTW Nyertesek</h2>
+        <p>A szezon végén a legjobban teljesítő játékosok/bandák</p>
+    </div>
+    <div class="team-grid">
+        <div class="team-member">
+            <div class="member-image" style="background-image: url('top1.png');"></div>
+            <div class="member-info">
+                <h3>Top1: ThornHoditok</h3>
+                <span class="member-role">EOTW Győztesek</span>
+            </div>
+        </div>
+        <div class="team-member">
+            <div class="member-image" style="background-image: url('eotw-playerlist.jpg');"></div>
+            <div class="member-info">
+                <h3>Top2: SolarBanda</h3>
+                <span class="member-role">2. helyezett</span>
+            </div>
+        </div>
+        <div class="team-member">
+            <div class="member-image" style="background-image: url('eotw-playerlist.jpg');"></div>
+            <div class="member-info">
+                <h3>Top3: Zippo</h3>
+                <span class="member-role">3. helyezett</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+
     <section id="faq">
         <div class="section-title">
             <h2>Gyakran Ismételt Kérdések</h2>
