--- a/index.html
+++ b/index.html
@@ -1647,6 +1647,7 @@
         </div>
         <nav id="mainNav">
             <a href="#home"><i class="fas fa-home"></i> Kezdőlap</a>
+            <a href="#eotw"><i class="fas fa-trophy"></i> EOTW</a>
             <a href="#csatlakozas"><i class="fas fa-plug"></i> Csatlakozás</a>
             <a href="https://bolt.thornempire.hu"><i class="fas fa-shop"></i> Bolt</a>
             <a href="#csapattagok"><i class="fas fa-users"></i> Csapattagok</a>
@@ -1784,7 +1785,7 @@
 
     <section id="eotw" class="section-bg">
     <div class="section-title">
-        <h2>EOTW Nyertesek</h2>
+        <h2>EOTW Nyertesek (2025.08.08.)</h2>
         <p>A szezon végén a legjobban teljesítő játékosok/bandák</p>
     </div>
     <div class="team-grid">
