--- a/index.html
+++ b/index.html
@@ -47,272 +47,6 @@
             max-width: 100vw;
         }
 
-        #birthday-popup {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 10001;
-            opacity: 0;
-            transition: all 0.5s ease;
-            backdrop-filter: blur(10px);
-        }
-
-        #birthday-popup.show {
-            opacity: 1;
-        }
-
-        .birthday-modal {
-            background: linear-gradient(135deg, #ff6b6b, #ee5a24, #ffa502);
-            padding: 40px 60px;
-            border-radius: 20px;
-            text-align: center;
-            box-shadow: 0 25px 50px rgba(255, 107, 107, 0.3);
-            transform: scale(0.8) rotateY(180deg);
-            transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
-            max-width: 90vw;
-            border: 3px solid #fff;
-            position: relative;
-            overflow: hidden;
-        }
-
-        #birthday-popup.show .birthday-modal {
-            transform: scale(1) rotateY(0deg);
-        }
-
-        .birthday-modal::before {
-            content: "";
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: linear-gradient(45deg, transparent, rgba(255, 255, 255, 0.1), transparent);
-            animation: shimmer 2s infinite;
-        }
-
-        @keyframes shimmer {
-            0% {
-                transform: translateX(-100%) translateY(-100%) rotate(45deg);
-            }
-
-            100% {
-                transform: translateX(100%) translateY(100%) rotate(45deg);
-            }
-        }
-
-        .birthday-title {
-            font-size: clamp(1.8rem, 5vw, 3rem);
-            font-weight: 700;
-            color: #fff;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-            z-index: 2;
-            position: relative;
-            animation: pulse 2s ease-in-out infinite;
-        }
-
-        .birthday-message {
-            font-size: clamp(1.2rem, 3vw, 2rem);
-            color: #fff;
-            font-weight: 600;
-            z-index: 2;
-            position: relative;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-        }
-
-        @keyframes pulse {
-
-            0%,
-            100% {
-                transform: scale(1);
-            }
-
-            50% {
-                transform: scale(1.05);
-            }
-        }
-
-        .birthday-decoration {
-            position: fixed;
-            top: 0;
-            width: 50px;
-            height: 100%;
-            z-index: 100;
-            pointer-events: none;
-        }
-
-        .decoration-left {
-            left: 0;
-            background: linear-gradient(90deg,
-                    rgba(255, 107, 107, 0.3) 0%,
-                    rgba(238, 90, 36, 0.3) 33%,
-                    rgba(255, 165, 2, 0.3) 66%,
-                    transparent 100%);
-        }
-
-        .decoration-right {
-            right: 0;
-            background: linear-gradient(270deg,
-                    rgba(255, 107, 107, 0.3) 0%,
-                    rgba(238, 90, 36, 0.3) 33%,
-                    rgba(255, 165, 2, 0.3) 66%,
-                    transparent 100%);
-        }
-
-        .decoration-balloons {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        .balloon {
-            position: absolute;
-            width: 10px;
-            height: 15px;
-            border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-            animation: float 6s ease-in-out infinite;
-        }
-
-        .balloon:nth-child(1) {
-            background: #ff6b6b;
-            left: 10px;
-            top: 20%;
-            animation-delay: 0s;
-        }
-
-        .balloon:nth-child(2) {
-            background: #ffa502;
-            left: 40px;
-            top: 40%;
-            animation-delay: 1s;
-        }
-
-        .balloon:nth-child(3) {
-            background: #ee5a24;
-            left: 70px;
-            top: 60%;
-            animation-delay: 2s;
-        }
-
-        .balloon:nth-child(4) {
-            background: #ff9ff3;
-            left: 25px;
-            top: 80%;
-            animation-delay: 3s;
-        }
-
-        .balloon:nth-child(5) {
-            background: #54a0ff;
-            left: 55px;
-            top: 30%;
-            animation-delay: 4s;
-        }
-
-        @keyframes float {
-
-            0%,
-            100% {
-                transform: translateY(0px) rotate(-2deg);
-            }
-
-            50% {
-                transform: translateY(-20px) rotate(2deg);
-            }
-        }
-
-        .confetti {
-            position: absolute;
-            width: 8px;
-            height: 8px;
-            background: #ff6b6b;
-            animation: confetti-fall 4s linear infinite;
-        }
-
-        .confetti:nth-child(odd) {
-            background: #ffa502;
-        }
-
-        .confetti:nth-child(3n) {
-            background: #ee5a24;
-        }
-
-        .confetti:nth-child(4n) {
-            background: #ff9ff3;
-        }
-
-        .confetti:nth-child(5n) {
-            background: #54a0ff;
-        }
-
-        @keyframes confetti-fall {
-            0% {
-                transform: translateY(-100vh) rotate(0deg);
-                opacity: 1;
-            }
-
-            100% {
-                transform: translateY(100vh) rotate(360deg);
-                opacity: 0;
-            }
-        }
-
-        .confetti:nth-child(1) {
-            left: 10%;
-            animation-delay: 0s;
-        }
-
-        .confetti:nth-child(2) {
-            left: 20%;
-            animation-delay: 0.2s;
-        }
-
-        .confetti:nth-child(3) {
-            left: 30%;
-            animation-delay: 0.4s;
-        }
-
-        .confetti:nth-child(4) {
-            left: 40%;
-            animation-delay: 0.6s;
-        }
-
-        .confetti:nth-child(5) {
-            left: 50%;
-            animation-delay: 0.8s;
-        }
-
-        .confetti:nth-child(6) {
-            left: 60%;
-            animation-delay: 1s;
-        }
-
-        .confetti:nth-child(7) {
-            left: 70%;
-            animation-delay: 1.2s;
-        }
-
-        .confetti:nth-child(8) {
-            left: 80%;
-            animation-delay: 1.4s;
-        }
-
-        .confetti:nth-child(9) {
-            left: 90%;
-            animation-delay: 1.6s;
-        }
-
-        .confetti:nth-child(10) {
-            left: 15%;
-            animation-delay: 1.8s;
-        }
-
         #particles-js {
             position: fixed;
             width: 100%;
@@ -680,7 +414,7 @@
         }
 
         .section-bg {
-            background:
+            background: 
                 linear-gradient(135deg, rgba(18, 18, 18, 0.9) 0%, rgba(10, 10, 10, 0.95) 100%),
                 radial-gradient(circle at 50% 50%, rgba(52, 152, 219, 0.03) 0%, transparent 50%);
             border-top: 1px solid rgba(52, 152, 219, 0.2);
@@ -1422,6 +1156,20 @@
             }
         }
 
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.1);
+            }
+
+            100% {
+                transform: scale(1);
+            }
+        }
+
         @keyframes bounce {
 
             0%,
@@ -1749,7 +1497,7 @@
                 font-size: 2rem;
             }
 
-            .news-image {
+.news-image {
                 height: 140px;
             }
 
@@ -1845,9 +1593,7 @@
 
             #particles-js,
             .mobile-menu-btn,
-            .scroll-down,
-            #birthday-popup,
-            .birthday-decoration {
+            .scroll-down {
                 display: none !important;
             }
 
@@ -1891,53 +1637,6 @@
 </head>
 
 <body>
-    <div id="birthday-popup">
-        <div class="birthday-modal">
-            <div class="birthday-title">🎉 BOLDOG SZÜLETÉSNAPOT 🎉</div>
-            <div class="birthday-message">ZSOLT (aka. Zsoltih_)</div>
-            <div class="birthday-message">ha ezt látod akkor kívánj boldog születésnapot Zsoltnak</div>
-        </div>
-    </div>
-
-    <div class="birthday-decoration decoration-left">
-        <div class="decoration-balloons">
-            <div class="balloon"></div>
-            <div class="balloon"></div>
-            <div class="balloon"></div>
-            <div class="balloon"></div>
-            <div class="balloon"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-        </div>
-    </div>
-
-    <div class="birthday-decoration decoration-right">
-        <div class="decoration-balloons">
-            <div class="balloon"></div>
-            <div class="balloon"></div>
-            <div class="balloon"></div>
-            <div class="balloon"></div>
-            <div class="balloon"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-            <div class="confetti"></div>
-        </div>
-    </div>
 
     <div id="particles-js"></div>
 
@@ -2057,7 +1756,7 @@
         </div>
     </section>
 
-    <section id="hirek" class="section-bg">
+<section id="hirek" class="section-bg">
         <div class="section-title">
             <h2>Legfrissebb Hírek</h2>
             <p>Maradj naprakész a szerver legújabb fejlesztéseivel és eseményeivel kapcsolatban</p>
@@ -2069,8 +1768,7 @@
                 </div>
                 <div class="news-content">
                     <h3>SOTW</h3>
-                    <p>SOTW 2025.08.09. 17:00-kor indul! Új kezdet vár mindannyiótokra. Ne maradj le a nagy indításról!
-                    </p>
+                    <p>SOTW 2025.08.09. 17:00-kor indul! Új kezdet vár mindannyiótokra. Ne maradj le a nagy indításról!</p>
                 </div>
             </div>
             <div class="news-card">
@@ -2086,34 +1784,34 @@
     </section>
 
     <section id="eotw" class="section-bg">
-        <div class="section-title">
-            <h2>EOTW Nyertesek (2025.08.08.)</h2>
-            <p>A szezon végén a legjobban teljesítő játékosok/bandák</p>
-        </div>
-        <div class="team-grid">
-            <div class="team-member">
-                <div class="member-image" style="background-image: url('top1.png');"></div>
-                <div class="member-info">
-                    <h3>Top1: ThornHoditok</h3>
-                    <span class="member-role">EOTW Győztesek</span>
-                </div>
-            </div>
-            <div class="team-member">
-                <div class="member-image" style="background-image: url('eotw-playerlist.jpg');"></div>
-                <div class="member-info">
-                    <h3>Top2: SolarBanda</h3>
-                    <span class="member-role">2. helyezett</span>
-                </div>
-            </div>
-            <div class="team-member">
-                <div class="member-image" style="background-image: url('eotw-playerlist.jpg');"></div>
-                <div class="member-info">
-                    <h3>Top3: Zippo</h3>
-                    <span class="member-role">3. helyezett</span>
-                </div>
+    <div class="section-title">
+        <h2>EOTW Nyertesek (2025.08.08.)</h2>
+        <p>A szezon végén a legjobban teljesítő játékosok/bandák</p>
+    </div>
+    <div class="team-grid">
+        <div class="team-member">
+            <div class="member-image" style="background-image: url('top1.png');"></div>
+            <div class="member-info">
+                <h3>Top1: ThornHoditok</h3>
+                <span class="member-role">EOTW Győztesek</span>
             </div>
         </div>
-    </section>
+        <div class="team-member">
+            <div class="member-image" style="background-image: url('eotw-playerlist.jpg');"></div>
+            <div class="member-info">
+                <h3>Top2: SolarBanda</h3>
+                <span class="member-role">2. helyezett</span>
+            </div>
+        </div>
+        <div class="team-member">
+            <div class="member-image" style="background-image: url('eotw-playerlist.jpg');"></div>
+            <div class="member-info">
+                <h3>Top3: Zippo</h3>
+                <span class="member-role">3. helyezett</span>
+            </div>
+        </div>
+    </div>
+</section>
 
 
     <section id="faq">
@@ -2270,24 +1968,6 @@
                 window.location.href = "about:blank";
             }
         }, 1000);
-
-        window.addEventListener('load', function () {
-            const popup = document.getElementById('birthday-popup');
-
-            setTimeout(() => {
-                popup.classList.add('show');
-            }, 500);
-
-            setTimeout(() => {
-                popup.classList.remove('show');
-
-                setTimeout(() => {
-                    if (popup.parentNode) {
-                        popup.parentNode.removeChild(popup);
-                    }
-                }, 600);
-            }, 5000);
-        });
 
         let keySequence = '';
         let navbarClickCount = 0;
