Update and rename index.html to weboldal.html

--- a/weboldal.html
+++ b/weboldal.html
@@ -61,6 +61,22 @@
       font-size: 0.9em;
       color: #94a3b8;
     }
+    .btn {
+      margin-top: 30px;
+      display: inline-block;
+      padding: 12px 25px;
+      background: #38bdf8;
+      color: #0f172a;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      transition: 0.2s;
+    }
+    .btn:hover {
+      background: #facc15;
+      color: #0f172a;
+    }
     footer {
       margin-top: 40px;
       font-size: 0.85em;
@@ -79,13 +95,17 @@
       <a href="https://dc.thornempire.hu" target="_blank">💬 dc.thornempire.hu</a>
       <a href="https://bolt.thornempire.hu" target="_blank">🛒 bolt.thornempire.hu</a>
     </div>
+
     <div class="note">
       <p><strong>U.I.:</strong> A héten nem leszek, ezért nem tudok foglalkozni a weboldallal.  
       Mivel IP-s lett a szerver, több mindent is ki és be kéne tenni a weboldalra.  
       Pár nap és elérhető lesz a weboldal, remélem, hogy már vasárnap meg tudom csinálni. </p>
       <p>- Aronn</p>
     </div>
+
+    <a href="https://thornempire.hu" target="_blank" class="btn">🌐 Balkercraftos weboldal</a>
   </div>
+
   <footer>
     © 2025 ThornEmpire. Minden jog fenntartva.
   </footer>
