--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <p>- Aronn</p>
     </div>
 
-    <a href="https://thornempire.hu/weboldal.html" target="_blank" class="btn">🌐 Balkercraftos weboldal</a>
+    <a href="https://thornempire.hu/weboldal" target="_blank" class="btn">🌐 Balkercraftos weboldal</a>
   </div>
 
   <footer>
