--- a/index.html
+++ b/index.html
@@ -2162,7 +2162,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Aronnhu. Minden jog fenntartva. | <a href="jogi.html">Jogi nyilatkozat</a></p>
+            <p>&copy; 2025 Aronnhu. Minden jog fenntartva. | <a href="jogi">Jogi nyilatkozat</a></p>
         </div>
     </footer>
 
